@@ -20,6 +20,7 @@ Here is a list of topics:
 - @ref page_region
 - @ref page_treasure_list
 - @ref page_client
+- @ref page_collect
 - @ref type_index
 - @ref TYPE_BUILDER
 - @ref TYPE_MATERIAL
